--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -81,7 +81,7 @@
 <div class="subheader">
     <h1 class="subheader-title">
         @*Registro Marca*@
-        Registro Propiedad Industrial e Intelectual
+        Registro de Propiedad Industrial e Intelectual
         <small>
         </small>
     </h1>
