--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -107,7 +107,7 @@
                                 <a class="nav-link" data-toggle="tab" href="#tab04" role="tab"><i class="fa fa-file mr-1"></i> Cesiones</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#tab05" role="tab"><i class="fa fa-file mr-1"></i> Actividades</a>
+                                <a class="nav-link" data-toggle="tab" href="#tab05" role="tab"><i class="fa fa-calendar mr-1"></i> Actividades</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tab06" role="tab"><i class="fa fa-file mr-1"></i> Revisión Usuario Negocio</a>
