--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -86,7 +86,7 @@
         </small>
     </h1>
 </div>
-
+<input type="hidden" name="id_registro" id="id_registro" value="0">
 <div class="row">
     <div class="col-md-12">
         <div class="panel ctm-panel" id="">
