--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -301,7 +301,7 @@
                 {
                     <li class="" data-filter-tags="RegistroMarcas">
                         <a href="~/PI/RegistroMarcas" title="RegistroMarcas" data-filter-tags="RegistroMarcas">
-                            <i class='fa fa-file-archive'></i>
+                            <i class='fa fa-box'></i>
                             <span class="nav-link-text" data-i18n="Branch 1">Propiedad Industrial e Intelectual</span>
                         </a>
                     </li>
