--- a/Views/PI/Marca.cshtml
+++ b/Views/PI/Marca.cshtml
@@ -102,7 +102,7 @@
                                         </div>
                                         <% if (data.activo == true) { %>
                                         <div class="col-md-6">
-                                            <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
+                                            <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>, <%- data.tipo_solicitud %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
                                         </div>
                                         <% } %>
                                     </div>
@@ -211,7 +211,7 @@
                                         <div class="form-group" id="uu_06_c">
                                             <label for="uu_04">Tipo</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_06" autocomplete="off" style="width: 100%;" disabled>
-                                                <option value="0" selected>Por definir</option>
+                                                <option value="1" selected>Por definir</option>
                                             </select>
                                         </div>
                                     </div>
