--- a/Views/PI/ModeloIndustrial.cshtml
+++ b/Views/PI/ModeloIndustrial.cshtml
@@ -102,7 +102,7 @@
                                         </div>
                                         <% if (data.activo == true) { %>
                                         <div class="col-md-6">
-                                            <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
+                                            <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>, <%- data.tipo_solicitud %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
                                         </div>
                                         <% } %>
                                     </div>
