--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -175,7 +175,7 @@
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_01_c">
-                                            <label for="uu_01">Antigua empresa propietaria <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_01">Antigua empresa propietaria</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_01" autocomplete="off" style="width: 100%;">
                                                 @*<option value="0" selected>Antigua empresa propietaria</option>*@
                                                 <option value="0" disabled selected>Seleccione una opción</option>
@@ -188,26 +188,26 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_03_c">
-                                            <label>Número de registro <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label>Número de registro</label>
                                             <input type="text" class="form-control input-sm" id="uu_03" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_04_c">
-                                            <label>Fecha legal <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label>Fecha legal</label>
                                             <input type="text" class="form-control input-sm" id="uu_04" autocomplete="off" readonly />
                                         </div>
                                     </div>
                                     <div class="col-md-3" id="uu_05_a">
                                         <div class="form-group" id="uu_05_c">
-                                            <label>Fecha de vencimiento <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label>Fecha de vencimiento</label>
                                             <input type="text" class="form-control input-sm" id="uu_05" autocomplete="off" readonly />
                                         </div>
                                     </div>
 
                                     <div class="col-md-3" id="uu_06_a">
                                         <div class="form-group" id="uu_06_c">
-                                            <label id="uu_06_l">Fecha de concesión <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label id="uu_06_l">Fecha de concesión</label>
                                             <input type="text" class="form-control input-sm" id="uu_06" autocomplete="off" readonly />
                                         </div>
                                     </div>
@@ -262,13 +262,13 @@
                                     </div>
                                     <div class="col-md-3" id="uu_37_a" style="display:none;">
                                         <div class="form-group" id="uu_37_c">
-                                            <label id="uu_06_l">Fecha para pagar los quinquenios o anualidades <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label id="uu_06_l">Fecha para pagar los quinquenios o anualidades</label>
                                             <input type="text" class="form-control input-sm" id="uu_37" autocomplete="off" readonly />
                                         </div>
                                     </div>
                                     <div class="col-md-3" id="uu_34_a" style="display:none;">
                                         <div class="form-group" id="uu_34_c">
-                                            <label for="uu_34">Tipo de pago <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_34">Tipo de pago</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_34" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (TipoPago item in ViewBag.tipo_pago)
@@ -292,7 +292,7 @@
                                     </div>
                                     <div class="col-md-3" id="uu_39_a">
                                         <div class="form-group" id="uu_39_c">
-                                            <label for="uu_39">Uso <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_39">Uso</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_39" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Uso item in ViewBag.uso)
@@ -381,7 +381,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_11_c">
-                                            <label>Número de solicitud <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label>Número de solicitud</label>
                                             <input type="text" class="form-control input-sm" id="uu_11" autocomplete="off" />
                                         </div>
                                     </div>
@@ -411,7 +411,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_14_c">
-                                            <label for="uu_14">Despacho <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_14">Despacho</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_14" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Despacho item in ViewBag.despacho)
@@ -513,13 +513,13 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_16_c">
-                                            <label>Persona que solicitó la licencia <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label id="uu_16_l">Persona que solicitó la licencia <font size="4" style="color:#FF0000"> * </font></label>
                                             <input type="text" class="form-control input-sm" id="uu_16" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_17_c">
-                                            <label for="uu_17">Licencia <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_17">Licencia</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_17" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (ConvenioLicencia item in ViewBag.licencia)
@@ -543,7 +543,7 @@
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_19_c">
-                                            <label for="uu_19">Cesión <font size="4" style="color:#FF0000"> * </font></label>
+                                            <label for="uu_19">Cesión</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_19" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (ContratoCesion item in ViewBag.cesion)
@@ -560,7 +560,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_21_c">
-                                            <label>Requerimiento del negocio</label>
+                                            <label id="uu_21_l">Requerimiento del negocio <font size="4" style="color:#FF0000"> * </font></label>
                                             <input type="text" class="form-control input-sm" id="uu_21" autocomplete="off" readonly />
                                         </div>
                                     </div>
