--- a/Content/css/admin.css
+++ b/Content/css/admin.css
@@ -1961,6 +1961,22 @@ input[type="radio"]:checked + .custom-control-label, input[type="checkbox"]:chec
     border-radius: 10px;
 }
 
+.dx-active-apl {
+    background-color: #ec2;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+}
+
+.dx-active-napl {
+    background-color: #ec2;
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+}
+
 .ctm-panel {
     background-color: transparent;
     -webkit-box-shadow: unset;
