--- a/Views/PI/AvisoComercial.cshtml
+++ b/Views/PI/AvisoComercial.cshtml
@@ -100,7 +100,7 @@
                                         <div class="col-md-6">
                                             <button type="button" class="dx-oc-link" onclick="Editar(<%- value %>)" title="Editar"><i class="fa fa-edit"></i></button>
                                         </div>
-                                        <% if (data.activo == true) { %>
+                                        <% if (data.activo==true && data.aplicado == false) { %>
                                         <div class="col-md-6">
                                             <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>, <%- data.tipo_solicitud %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
                                         </div>
