--- a/Content/css/admin.css
+++ b/Content/css/admin.css
@@ -1961,15 +1961,7 @@ input[type="radio"]:checked + .custom-control-label, input[type="checkbox"]:chec
     border-radius: 10px;
 }
 
-.dx-active-apl {
-    background-color: #ec2;
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
-}
-
-.dx-active-napl {
+.dx-active-dark {
     background-color: #ec2;
     display: inline-block;
     width: 10px;
