boton ver detalle

--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -99,7 +99,7 @@
                                 columns.AddFor(m => m.id).CellTemplate(@<text>
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Ver detalle"><i class="fa fa-eye"></i> </a>
+                                            <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Editar"><i class="fa fa-edit"></i> </a>
                                         </div>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
