--- a/Views/PI/Marca.cshtml
+++ b/Views/PI/Marca.cshtml
@@ -100,7 +100,7 @@
                                         <div class="col-md-6">
                                         <button type="button" class="dx-oc-link" onclick="Editar(<%- value %>)" title="Editar"><i class="fa fa-edit"></i></button>
                                         </div>
-                                        <% if (data.activo==true && data.aplicado == false) { %>
+                                        <% if (data.activo==true && data.atendido== false) { %>
                                         <div class="col-md-6">
                                             <button type="button" class="dx-oc-link"  onclick="Enviar(<%- value %>, <%- data.tipo_solicitud %>)" title="Registrar Propiedad"><i class="fa fa-arrow-circle-right"></i></button>
                                         </div>
@@ -150,7 +150,7 @@
                     <div class="panel-content">
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#tab01" role="tab"><i class="fa fa-info mr-1"></i> Información</a>
+                                <a class="nav-link active" data-toggle="tab" href="#tab01" role="tab"><i class="fa fa-info mr-1"></i> Informaciï¿½n</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" data-toggle="tab" href="#tab02" role="tab"><i class="fa fa-file mr-1"></i> Anexos</a>
@@ -181,7 +181,7 @@
 
                                     <div class="col-md-4">
                                         <div class="form-group" id="uu_05_c">
-                                            <label for="uu_05">País</label>
+                                            <label for="uu_05">Paï¿½s</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_05" autocomplete="off" style="width: 100%;" disabled>
                                                 <option value="0" selected>Buscar</option>
                                                 @foreach (Pais item in ViewBag.paises)
@@ -222,7 +222,7 @@
                                     <div class="dropzone-container" style="border-color:#dadada !important;">
                                         <form action="" class="dropzone" id="dz-documentos" method="post" enctype="multipart/form-data">
                                             <input type="file" name="file" style="display:none;" />
-                                            <div class="dz-message" data-dz-message><span>Haz click aquí o arrastra aquí para cargar el documento</span></div>
+                                            <div class="dz-message" data-dz-message><span>Haz click aquï¿½ o arrastra aquï¿½ para cargar el documento</span></div>
                                         </form>
                                     </div>
                                 </div>
@@ -297,7 +297,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <p>Se necesita confirmación para desactivar los datos de este registro</p>
+                        <p>Se necesita confirmaciï¿½n para desactivar los datos de este registro</p>
                     </div>
                 </div>
                 <div class="modal-footer red-border">
