--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -283,7 +283,7 @@
                                     </a>
                                 </li>
                                 <li class="">
-                                    <a href="~/PI/Obra?tipo=Gráficas" title="Obra" data-filter-tags="Obras">
+                                    <a href="~/PI/Obra?tipo=Graficas" title="Obra" data-filter-tags="Obras">
                                         <span class="nav-link-text" data-i18n="Obra">Obras Gráficas</span>
                                     </a>
                                 </li>
